update: .travis.yml, execute master branch only

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,21 +4,9 @@ language: python
 sudo: required
 
 branches:
-  except: /\/feature\//
+  only: master
 
 jobs:
   include:
     - dist: focal
       script: ./ci/travis.sh
-
-    #- dist: bionic
-    #  install:
-    #    - pip install -r ansible/requirements.txt
-    #  env: CONTAINER_ENGINE=docker
-    #  script: ./ci/travis-ansible.sh
-
-    #- dist: bionic
-    #  install:
-    #    - pip install -r ansible/requirements.txt
-    #  env: CONTAINER_ENGINE=cri-o
-    #  script: ./ci/travis-ansible.sh
