fix: fix offline repo locations

--- a/target-scripts/playbook/roles/offline-repo/tasks/Debian.yml
+++ b/target-scripts/playbook/roles/offline-repo/tasks/Debian.yml
@@ -15,7 +15,7 @@
 
 - name: Install offline apt repo
   apt_repository:
-    repo: deb [trusted=yes] {{ ubuntu_repo }}
+    repo: deb [trusted=yes] {{ ubuntu_repo }}/local/ ./
     filename: offline
     state: present
     update_cache: yes
