fix(docker): Update docker related files

--- a/docker/Dockerfile.ubuntu2004
+++ b/docker/Dockerfile.ubuntu2004
@@ -4,6 +4,10 @@ RUN apt update \
     && apt install -y sudo tzdata \
     && apt clean all
 
-COPY prepare-*.sh requirements.txt /root
+RUN mkdir /root/scripts
+COPY prepare-*.sh requirements.txt /root/
+COPY scripts/* /root/scripts/
+
 RUN cd /root && ./prepare-pkgs.sh
-RUN cd /root && ./prepare-docker.sh
+RUN cd /root && ./prepare-py.sh
+RUN cd /root && ./prepare-docker.sh || exit 0  # ignore error
