--- a/docker/Dockerfile.alma8
+++ b/docker/Dockerfile.alma8
@@ -2,7 +2,10 @@ FROM almalinux:8
 
 RUN yum install -y sudo dnf 'dnf-command(download)' && yum clean all
 
-COPY prepare-*.sh requirements.txt /root
+RUN mkdir /root/scripts
+COPY prepare-*.sh requirements.txt /root/
+COPY scripts/* /root/scripts/
+
 RUN cd /root && ./prepare-pkgs.sh
 RUN cd /root && ./prepare-py.sh
-RUN cd /root && ./prepare-docker.sh
+RUN cd /root && ./prepare-docker.sh || exit 0  # ignore error
