--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,21 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a CI script
-        run: ci/ci.sh
+      - name: Install docker
+        run: ./install-docker.sh
+      - name: Prepare packages
+        run: ./prepare-pkgs.sh
+      - name: Prepare python
+        run: ./prepare-py.sh || exit 1
+      - name: Get kubespray
+        run: ./get-kubespray.sh
+      - name: Pypi mirror
+        run: ./pypi-mirror.sh
+      - name: Download kubespray files
+        run: ./download-kubespray-files.sh
+      - name: Download additional containers
+        run: ./download-additional-containers.sh
+      - name: Create repo
+        run: ./create-repo.sh
+      - name: Copy target scripts
+        run: ./copy-target-scripts.sh
