--- a/docker/Dockerfile.ubuntu2004
+++ b/docker/Dockerfile.ubuntu2004
@@ -9,5 +9,5 @@ COPY prepare-*.sh requirements.txt /root/
 COPY scripts/* /root/scripts/
 
 RUN cd /root && ./prepare-pkgs.sh
-RUN cd /root && ./prepare-py.sh
-RUN cd /root && ./prepare-docker.sh || exit 0  # ignore error
+#RUN cd /root && ./prepare-py.sh
+RUN cd /root && ./install-docker.sh || exit 0  # ignore error
