--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-ansible==3.4.0
-ansible-base==2.10.15
-cryptography==2.8
+ansible==5.7.1
+ansible-core==2.12.5
+cryptography==3.4.8
 jinja2==2.11.3
 netaddr==0.7.19
 pbr==5.4.4
