--- a/test/vagrant/ubuntu-cluster/Vagrantfile
+++ b/test/vagrant/ubuntu-cluster/Vagrantfile
@@ -13,7 +13,7 @@ Vagrant.configure("2") do |config|
   config.vm.define "installer" do |c|
     c.vm.hostname = "installer"
     c.vm.network "private_network", ip: "192.168.56.60"
-    c.vm.network "forwarded_port", guest: 22, host: 2360, id: "ssh"
+    #c.vm.network "forwarded_port", guest: 22, host: 2360, id: "ssh"
     c.vm.provider "virtualbox" do |vb|
       vb.memory = "2048"
       vb.cpus = 2
