--- a/target-scripts/playbook/roles/offline-repo/defaults/main.yml
+++ b/target-scripts/playbook/roles/offline-repo/defaults/main.yml
@@ -1,2 +1,2 @@
-yum_repo: http://localhost:35000/rpms
-ubuntu_repo: http://localhost:35000/debs
+yum_repo: http://localhost/rpms
+ubuntu_repo: http://localhost/debs
