chore(test): add git in dockerfiles

--- a/docker/Dockerfile.alma8
+++ b/docker/Dockerfile.alma8
@@ -5,7 +5,7 @@ RUN dnf install -y sudo dnf 'dnf-command(download)' && dnf clean all
 RUN mkdir /root/scripts
 
 COPY prepare-*.sh /root/
-RUN cd /root && ./prepare-pkgs.sh && dnf clean all
+RUN cd /root && ./prepare-pkgs.sh && dnf install -y git && dnf clean all
 
 COPY install-*.sh /root/
 RUN cd /root && ./install-docker.sh && dnf clean all
