--- a/test/vagrant/cluster/Vagrantfile
+++ b/test/vagrant/cluster/Vagrantfile
@@ -3,6 +3,8 @@
 
 Vagrant.configure("2") do |config|
   config.vm.box = "generic/ubuntu2204"
+  #config.vm.box = "generic/ubuntu2004"
+  #config.vm.box = "almalinux/8"
   config.ssh.insert_key = false
 
   config.vm.provider "virtualbox" do |vb|
@@ -18,7 +20,7 @@ Vagrant.configure("2") do |config|
       vb.memory = "2048"
       vb.cpus = 2
     end
-    c.vm.synced_folder "../../..", "/home/vagrant/kubespray-offline", owner: "vagrant", group: "vagrant"
+    c.vm.synced_folder "../../../", "/home/vagrant/kubespray-offline", owner: "vagrant", group: "vagrant"
   end
 
   config.vm.define "master" do |c|
