--- a/Dockerfile_rocky8
+++ b/Dockerfile_rocky8
@@ -4,6 +4,6 @@ RUN dnf install -y dnf-plugins-core
 RUN dnf config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
 RUN dnf install -y docker-ce docker-ce-cli containerd.io findutils which sudo patch
 
-COPY . .
+ADD . .
 RUN mv /igz_files/* .
 ENTRYPOINT ["/igz_make_offline.sh"]
