--- a/igz_files/igz_post_install.yml
+++ b/igz_files/igz_post_install.yml
@@ -88,20 +88,12 @@
         dest: /usr/bin/nerdctl
         state: link
 
-    - name: Copy nvidia runtime patch for containerd
-      ansible.builtin.copy:
-        src: config.toml.patch
-        dest: /etc/containerd/
-        owner: root
-        group: root
-        mode: "0o755"
-
     - name: Patch containerd config to work with nvidia runtime
       ansible.builtin.shell:
-        cmd: patch config.toml < config.toml.patch
-        chdir: /etc/containerd/
+        cmd: nvidia-ctk runtime configure --runtime=containerd
       register: patch_result
       failed_when: patch_result.rc > 1
+      become: true
       tags:
         - skip_ansible_lint
 
