--- a/Dockerfile_rocky8
+++ b/Dockerfile_rocky8
@@ -2,7 +2,9 @@ FROM rockylinux/rockylinux:8.8
 
 RUN dnf install -y dnf-plugins-core
 RUN dnf config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
-RUN dnf install -y docker-ce docker-ce-cli containerd.io findutils which sudo patch
+
+RUN dnf install -y docker-ce docker-ce-cli containerd.io findutils which sudo patch wget
+RUN wget --no-check-certificate https://artifactory.iguazeng.com/artifactory/iguazio-devops_virtual/opt_packages/skopeo-1.14.0.tar.gz && tar -zxf skopeo-1.14.0.tar.gz -C /usr/bin
 
 ADD . .
 RUN mv /igz_files/* .
