Fix killing task

--- a/igz_files/igz_pre_install.yml
+++ b/igz_files/igz_pre_install.yml
@@ -6,7 +6,7 @@
       register: result
       failed_when:
         - result.rc != 0
-        - '"No such container" in result.stderr'
+        - '"No such container" not in result.stderr'
       with_items:
         - kompton_registry
         - kubespray_nginx
