--- a/igz_files/igz_offline.yml
+++ b/igz_files/igz_offline.yml
@@ -1,10 +1,7 @@
-http_server: "http://{{ igz_registry_host }}"
-registry_port: "{{ igz_registry_port }}"
-registry_host: "{{ igz_registry_host }}:{{ igz_registry_port }}"
-
-files_repo: "{{ http_server }}:{{ kubespray_nginx_port }}/files"
-yum_repo: "{{ http_server }}:{{ kubespray_nginx_port }}/rpms"
-ubuntu_repo: "{{ http_server }}:{{ kubespray_nginx_port }}/debs"
+---
+# Do not modify this file. Use igz_override.yml.j2 and inventory generator instead
+files_repo: "{{ http_server }}/files"
+yum_repo: "{{ http_server }}/rpms"
 
 # Registry overrides
 kube_image_repo: "{{ registry_host }}"
