--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-20.04, ubuntu-22.04 ]
+        os: [ ubuntu-22.04 ]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -38,26 +38,8 @@ jobs:
 
       - name: Install docker
         run: ./install-docker.sh
-      - name: Prepare packages
-        run: ./prepare-pkgs.sh
-      - name: Prepare python
-        run: ./prepare-py.sh || exit 1
-      - name: Get kubespray
-        run: ./get-kubespray.sh
-      - name: Pypi mirror
-        run: ./pypi-mirror.sh
-      - name: Download kubespray files
-        run: ./download-kubespray-files.sh
-      - name: Download additional containers
-        run: ./download-additional-containers.sh
-      #- name: Create repo
-      #  run: ./create-repo.sh
-      - name: Create container image for create repo
-        run: (cd docker && ./build-image.sh ${{ matrix.os }})
-      - name: Create repo in container
-        run: (cd docker && ./create-repo-in-docker.sh ${{ matrix.os }})
-      - name: Copy target scripts
-        run: ./copy-target-scripts.sh
+      - name: Download all
+        run: ./download-all.sh
       - name: Show outputs directory size
         run: du outputs
 
@@ -72,13 +54,28 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        os: [ alma8, alma9 ]
+        os: [ alma8, alma9, ubuntu-20.04 ]
 
     steps:
       - uses: actions/checkout@v4
+
       - name: Install docker
         run: ./install-docker.sh
-      - name: create docker image
-        run: ./docker/build-image.sh ${{ matrix.os }}
-      - name: download all in docker
-        run: ./docker/download-all.sh ${{ matrix.os }}
+      - name: Prepare packages
+        run: ./prepare-pkgs.sh
+      #- name: Prepare python
+      #  run: ./prepare-py.sh || exit 1
+      - name: Get kubespray
+        run: ./get-kubespray.sh
+      #- name: Pypi mirror
+      #  run: ./pypi-mirror.sh
+      #- name: Download kubespray files
+      #  run: ./download-kubespray-files.sh
+      #- name: Download additional containers
+      #  run: ./download-additional-containers.sh
+      - name: Create container image for create repo
+        run: (cd docker && ./build-image.sh ${{ matrix.os }})
+      - name: Download files without images in container
+        run: (cd docker && ./download-files.sh ${{ matrix.os }})
+      - name: Create repo in container
+        run: (cd docker && ./create-repo-in-docker.sh ${{ matrix.os }})
