--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-ansible==8.5.0
+ansible==9.5.1
 cryptography==41.0.4
-jinja2==3.1.2
+jinja2==3.1.4
 jmespath==1.0.1
 MarkupSafe==2.1.3
-netaddr==0.9.0
+netaddr==1.2.1
 pbr==5.11.1
-ruamel.yaml==0.17.35
+ruamel.yaml==0.18.6
 ruamel.yaml.clib==0.2.8
+jsonschema==4.22.0
