--- a/docker/Dockerfile.alma8
+++ b/docker/Dockerfile.alma8
@@ -2,12 +2,11 @@ FROM almalinux:8
 
 RUN dnf install -y sudo dnf 'dnf-command(download)' && dnf clean all
 
-RUN mkdir /root/scripts
+RUN mkdir /root/scripts && mkdir /root/target-scripts
+COPY target-scripts/config.sh /root/target-scripts/
+COPY prepare-*.sh install-*.sh /root/
 
-COPY prepare-*.sh /root/
 RUN cd /root && ./prepare-pkgs.sh && dnf install -y git && dnf clean all
-
-COPY install-*.sh /root/
 RUN cd /root && ./install-docker.sh && dnf clean all
 
 #COPY requirements.txt /root/
