--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,8 +36,10 @@ jobs:
           path: outputs/
           key: ${{ runner.os }}-outputs
 
-      - name: Install docker
-        run: ./install-docker.sh
+      # Now use podman instead of docker
+      #- name: Install docker
+      #  run: ./install-docker.sh
+
       - name: Download all
         run: ./download-all.sh
       - name: Show outputs directory size
