--- a/docker/Dockerfile.alma8
+++ b/docker/Dockerfile.alma8
@@ -2,9 +2,11 @@ FROM almalinux:8
 
 RUN dnf install -y sudo dnf 'dnf-command(download)' && dnf clean all
 
-RUN mkdir /root/scripts && mkdir /root/target-scripts
-COPY target-scripts/config.sh /root/target-scripts/
-COPY prepare-*.sh install-*.sh /root/
+RUN mkdir /root/scripts && mkdir /root/target-scripts && mkdir /root/ci-test
+COPY *.sh /root/
+COPY scripts/*.sh /root/scripts/
+COPY target-scripts/*.sh /root/target-scripts/
+COPY ci-test/* /root/ci-test
 
 RUN cd /root && ./prepare-pkgs.sh && dnf install -y git && dnf clean all
 RUN cd /root && ./install-docker.sh && dnf clean all
