--- a/docker/Dockerfile.ubuntu-20.04
+++ b/docker/Dockerfile.ubuntu-20.04
@@ -4,9 +4,11 @@ RUN apt update \
     && apt install -y sudo tzdata \
     && apt clean all
 
-RUN mkdir /root/scripts && mkdir /root/target-scripts
-COPY target-scripts/config.sh /root/target-scripts/
-COPY prepare-*.sh install-*.sh /root/
+RUN mkdir /root/scripts && mkdir /root/target-scripts && mkdir /root/ci-test
+COPY *.sh /root/
+COPY scripts/*.sh /root/scripts/
+COPY target-scripts/*.sh /root/target-scripts/
+COPY ci-test/* /root/ci-test
 
 RUN cd /root && ./prepare-pkgs.sh && apt install -y git && apt clean all
 RUN cd /root && ./install-docker.sh && apt clean all
