--- a/docker/Dockerfile.ubuntu-22.04
+++ b/docker/Dockerfile.ubuntu-22.04
@@ -4,14 +4,10 @@ RUN apt update \
     && apt install -y sudo tzdata \
     && apt clean all
 
-RUN mkdir /root/scripts && mkdir /root/target-scripts && mkdir /root/ci-test
-COPY *.sh /root/
-COPY scripts/*.sh /root/scripts/
-COPY target-scripts/*.sh /root/target-scripts/
-COPY ci-test/* /root/ci-test
+#RUN mkdir /root/scripts && mkdir /root/target-scripts
+#COPY *.sh /root/
+#COPY scripts/*.sh /root/scripts/
+#COPY target-scripts/*.sh /root/target-scripts/
 
-RUN cd /root && ./prepare-pkgs.sh && apt install -y git && apt clean all
-RUN cd /root && ./install-docker.sh && apt clean all
-
-#COPY requirements.txt /root/
-#RUN cd /root && ./prepare-py.sh
+#RUN cd /root && ./prepare-pkgs.sh && apt install -y git && apt clean all
+#RUN cd /root && ./install-docker.sh && apt clean all
