--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -74,4 +74,4 @@ jobs:
       - name: Download in container
         run: ./docker/download-for-ci-in-docker.sh ${{ matrix.os }}
       - name: Run ci-tests.sh in container
-        run: IS_OFFLINE=true ./docker/ci-test-in-docker.sh ${{ matrix.os }}
+        run: ./docker/ci-test-in-docker.sh ${{ matrix.os }}
