--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,7 +60,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ alma8, alma9, ubuntu-20.04, ubuntu-22.04 ]
+        os: [ alma8, alma9, ubuntu-20.04, ubuntu-22.04, ubuntu-24.04 ]
 
     steps:
       - uses: actions/checkout@v4
