--- a/test/vagrant/cluster/Vagrantfile
+++ b/test/vagrant/cluster/Vagrantfile
@@ -2,8 +2,8 @@
 # vi: set ft=ruby :
 
 Vagrant.configure("2") do |config|
+  #c.vm.box = "bento/ubuntu-24.04"
   config.vm.box = "generic/ubuntu2204"
-  #config.vm.box = "generic/ubuntu2004"
   #config.vm.box = "almalinux/8"
   config.ssh.insert_key = false
 
