test(vagrant): Add rocky9 in Vagrantfile

--- a/test/vagrant/singles/Vagrantfile
+++ b/test/vagrant/singles/Vagrantfile
@@ -31,11 +31,22 @@ Vagrant.configure("2") do |config|
     c.vm.synced_folder "../../../", "/home/vagrant/kubespray-offline", owner: "vagrant", group: "vagrant"
   end
 
+  config.vm.define "rocky9" do |c|
+    c.vm.hostname = "rocky9"
+    c.vm.box = "generic/rocky9"
+    c.vm.network "private_network", ip: "192.168.56.65"
+    c.vm.provider "virtualbox" do |vb|
+      vb.memory = "2048"
+      vb.cpus = 2
+    end
+    c.vm.synced_folder "../../../", "/home/vagrant/kubespray-offline", owner: "vagrant", group: "vagrant"
+  end
+
   config.vm.define "alma8" do |c|
     c.vm.hostname = "alma8"
     #c.vm.box = "almalinux/8" # root fs is too small...
     c.vm.box = "bento/almalinux-8"
-    c.vm.network "private_network", ip: "192.168.56.65"
+    c.vm.network "private_network", ip: "192.168.56.66"
     c.vm.provider "virtualbox" do |vb|
       vb.memory = "2048"
       vb.cpus = 2
