--- a/offline.yml
+++ b/offline.yml
@@ -20,6 +20,7 @@ ubuntu_repo: "{{ http_server }}/debs"
 # Registry overrides
 kube_image_repo: "{{ registry_host }}"
 gcr_image_repo: "{{ registry_host }}"
+github_image_repo: "{{ registry_host }}"
 docker_image_repo: "{{ registry_host }}"
 quay_image_repo: "{{ registry_host }}"
 
