feat(ci): Don't run CI on feature branches

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,12 +5,12 @@ on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches:
-      - master
+      - main
       - develop
-      - 'feature/**'
+      #- 'feature/**'
   pull_request:
     branches:
-      - master
+      - main
       - develop
 
   # Allows you to run this workflow manually from the Actions tab
