--- a/test/vagrant/cluster/Vagrantfile
+++ b/test/vagrant/cluster/Vagrantfile
@@ -7,19 +7,20 @@ Vagrant.configure("2") do |config|
   #config.vm.box = "almalinux/8"
   config.ssh.insert_key = false
 
-  config.vm.provider "virtualbox" do |vb|
-    vb.memory = "4096"
+  config.vm.provider :virtualbox do |vb|
+    vb.memory = 2048
     vb.cpus = 2
+  end
+
+  config.vm.provider :libvirt do |lv|
+    lv.memory = 2048
+    lv.cpus = 2
   end
 
   config.vm.define "installer" do |c|
     c.vm.hostname = "installer"
     c.vm.network "private_network", ip: "192.168.56.60"
     #c.vm.network "forwarded_port", guest: 22, host: 2360, id: "ssh"
-    c.vm.provider "virtualbox" do |vb|
-      vb.memory = "2048"
-      vb.cpus = 2
-    end
     c.vm.synced_folder "../../../", "/home/vagrant/kubespray-offline", owner: "vagrant", group: "vagrant"
   end
 
