--- a/test/vagrant/singles/Vagrantfile
+++ b/test/vagrant/singles/Vagrantfile
@@ -4,19 +4,20 @@
 Vagrant.configure("2") do |config|
   config.ssh.insert_key = false
 
-  config.vm.provider "virtualbox" do |vb|
-    vb.memory = "4096"
+  config.vm.provider :virtualbox do |vb|
+    vb.memory = 2048
     vb.cpus = 2
+  end
+
+  config.vm.provider :libvirt do |lv|
+    lv.memory = 2048
+    lv.cpus = 2
   end
 
   config.vm.define "ubuntu24" do |c|
     c.vm.hostname = "ubuntu24"
     c.vm.box = "bento/ubuntu-24.04"
     c.vm.network "private_network", ip: "192.168.56.63"
-    c.vm.provider "virtualbox" do |vb|
-      vb.memory = "2048"
-      vb.cpus = 2
-    end
     c.vm.synced_folder "../../../", "/home/vagrant/kubespray-offline", owner: "vagrant", group: "vagrant"
   end
 
@@ -24,10 +25,6 @@ Vagrant.configure("2") do |config|
     c.vm.hostname = "ubuntu22"
     c.vm.box = "generic/ubuntu2204"
     c.vm.network "private_network", ip: "192.168.56.64"
-    c.vm.provider "virtualbox" do |vb|
-      vb.memory = "2048"
-      vb.cpus = 2
-    end
     c.vm.synced_folder "../../../", "/home/vagrant/kubespray-offline", owner: "vagrant", group: "vagrant"
   end
 
@@ -35,10 +32,6 @@ Vagrant.configure("2") do |config|
     c.vm.hostname = "rocky9"
     c.vm.box = "generic/rocky9"
     c.vm.network "private_network", ip: "192.168.56.65"
-    c.vm.provider "virtualbox" do |vb|
-      vb.memory = "2048"
-      vb.cpus = 2
-    end
     c.vm.synced_folder "../../../", "/home/vagrant/kubespray-offline", owner: "vagrant", group: "vagrant"
   end
 
@@ -47,10 +40,6 @@ Vagrant.configure("2") do |config|
     #c.vm.box = "almalinux/8" # root fs is too small...
     c.vm.box = "bento/almalinux-8"
     c.vm.network "private_network", ip: "192.168.56.66"
-    c.vm.provider "virtualbox" do |vb|
-      vb.memory = "2048"
-      vb.cpus = 2
-    end
     c.vm.synced_folder "../../../", "/home/vagrant/kubespray-offline", owner: "vagrant", group: "vagrant"
   end
 end
